<resources>
    <string name="app_name">GasSimon</string>
    <string name="texto">Bienvenido a Gasimon</string>
    <string name="textto2">Sistema de Inventario</string>
    <string name="login">Iniciar secion</string>
    <string name="encabezado">Elaborado por Helmut Colindres</string>
    <string name="registrar">Registrar</string>
    <string name="txtRegistrar">Crear una cuenta</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_apellido">Apellido</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="btn_Cancelar">Cancelar</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_sesion">cerrar secion</string>
    <string name="txt_usuario">usuario</string>
    <string name="txt_actualizar">Actualizar</string>
    <string name="txt_eliminar">Eliminar</string>
    <string name="txt_actualizar_Perfil">Actualizar Perfil</string>
    <string name="btn_Aceptar">Aceptar</string>
    <string name="txt_Dialog">Esta es una aplicacion para llevar el control de Inventario GasSimon creada por Helmut Josue Colindres Brenes</string>
    <string name="list_inventario">Lista de Inventario</string>
    <string name="list_usuarios">Lista de usuarios</string>
</resources>