<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient2"
    tools:context=".login_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtRegistrar"
            android:fontFamily="sans-serif-black"
            android:textSize="20dp"
            android:textColor="#000"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:textAllCaps="true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_nombre"
            android:background="#fff"
            android:textColorHint="#000"
            android:padding="10dp"
            android:textSize="20dp"
            android:textColor="#000"
            android:layout_margin="15dp"
            android:id="@+id/txt_nombre2"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_apellido"
            android:textColorHint="#000"
            android:padding="10dp"
            android:background="#fff"
            android:textSize="20dp"
            android:textColor="#000"
            android:layout_margin="15dp"
            android:id="@+id/txt_apellido2"/>

        <EditText
            android:id="@+id/text_usuario2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/txt_usuario"
            android:textColor="#000"
            android:textColorHint="#000"
            android:padding="10dp"
            android:background="#fff"
            android:textSize="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_password"
            android:inputType="textPassword"
            android:textColorHint="#000"
            android:textSize="20dp"
            android:textColor="#000"
            android:padding="10dp"
            android:background="#fff"
            android:layout_margin="15dp"
            android:id="@+id/text_pass2" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal">
            <Button

                android:id="@+id/btn_crear_cuenta"
                android:layout_weight="1"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/txtRegistrar"
                android:background="@drawable/boton"
                android:textColor="#000"
                android:textSize="16dp"
                android:fontFamily="sans-serif-black"
                android:layout_marginRight="15dp"/>

            <Button
                android:id="@+id/btn_cancelar"
                android:layout_weight="1"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_Cancelar"
                android:background="@drawable/boton"
                android:fontFamily="sans-serif-black"
                android:textColor="#000"
                android:textSize="16dp"
                android:layout_marginLeft="15dp"/>


        </LinearLayout>
    </LinearLayout>

</ScrollView>