<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient2"
    tools:context=".login_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical"
        android:padding="15dp"
        android:layout_margin="15dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:src="@drawable/usuario"
            android:padding="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"/>
        <EditText
            android:id="@+id/text_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_usuario"
            android:textColor="#000"
            android:textColorHint="#000"
            android:layout_margin="20dp"
            android:background="#fff"
            android:padding="10dp" />
        <EditText
            android:id="@+id/text_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_password"
            android:textColor="#000"
            android:textColorHint="#000"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:background="#fff"
            android:inputType="textPassword"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal">
            <Button
                android:id="@+id/btn_login"
                android:layout_weight="1"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:background="@drawable/boton"
                android:textColor="#000"
                android:textSize="16dp"
                android:fontFamily="sans-serif-black"
                android:layout_marginRight="15dp"/>

            <Button
                android:id="@+id/btn_registrar"
                android:layout_weight="1"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/registrar"
                android:background="@drawable/boton"
                android:fontFamily="sans-serif-black"
                android:textColor="#000"
                android:textSize="16dp"
                android:layout_marginLeft="15dp"/>


        </LinearLayout>
    </LinearLayout>
</ScrollView>