<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/logo1"
      android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
      android:layout_marginBottom="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/texto"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-black"
        android:layout_marginBottom="30dp"
        android:padding="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/texto"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-black"
        android:layout_marginBottom="30dp"
        android:padding="10dp"/>

    <Button
        android:id="@+id/Entrar"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textColor="#ffff"
        android:text="@string/login"
        android:background="@drawable/boton"
        android:layout_gravity="center_horizontal"/>

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/encabezado"
      android:textColor="#fff"
      android:textAllCaps="true"
    android:layout_gravity="center_horizontal"
      android:fontFamily="sans-serif"
      android:textSize="16dp"
      android:padding="10dp"/>
</LinearLayout>

</ScrollView>