<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:orientation="vertical">

        <LinearLayout
            android:padding="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:orientation="vertical"
            android:background="@drawable/gradient"
            android:gravity="center">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/usuario"
                android:layout_marginTop="40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="Helmut 96"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_login"
            android:layout_marginTop="-25dp"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="80dp">
            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_baseline_subdirectory_arrow_left_24"
                android:background="@drawable/boton"
                android:padding="6dp"
                android:layout_marginStart="6dp"
                android:layout_gravity="center_vertical"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="Regresar Menu"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:layout_marginLeft= "20dp"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="0.6"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/usuario"
                android:layout_marginEnd="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_usuario"
                    android:textStyle="bold"
                    android:textSize="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Helmut96"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_supervised_user_circle_2"
                android:layout_marginEnd="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_nombre"
                    android:textStyle="bold"
                    android:textSize="20dp"/>
                <TextView
                    android:id="@+id/Tnombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Helmut Josue"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_supervised_user_circle_2"
                android:layout_marginEnd="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_apellido"
                    android:textStyle="bold"
                    android:textSize="20dp"/>
                <TextView
                    android:id="@+id/Tapellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Colindres Brenes"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_email_24"
                android:layout_marginEnd="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_email"
                    android:textStyle="bold"
                    android:textSize="20dp"/>
                <TextView

                    android:id="@+id/Temail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="josubrenes0@gmail.com"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:padding="15dp">
            <Button
                android:id="@+id/btn_actualizar"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_actualizar"
                android:background="@drawable/boton"
                android:fontFamily="sans-serif-black"/>
            <Button
                android:id="@+id/btn_eliminar"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_eliminar"
                android:background="@drawable/boton"
                android:fontFamily="sans-serif-black"/>
            <Button
                android:id="@+id/btn_cerrar"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_sesion"
                android:background="@drawable/boton"
                android:fontFamily="sans-serif-black"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>